infra/k8s/index-elasticsearch-depl.yaml
# Ref: https://www.digitalocean.com/community/tutorials/how-to-set-up-an-elasticsearch-fluentd-and-kibana-efk-logging-stack-on-kubernetes
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: index-es-cluster
spec:
  serviceName: index-es
  replicas: 3
  selector:
    matchLabels:
      app: index-es
  template:
    metadata:
      labels:
        app: index-es
    spec:
      containers:
      - name: index-es
        image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
        # volumeMounts:
        # - name: data
        #   mountPath: /usr/share/elasticsearch/data
---
apiVersion: v1
kind: Service
metadata:
  name: index-es
spec:
  selector:
    app: index-es
  # Headless service
  clusterIP: None
  ports:
    - name: rest
      protocol: TCP
      port: 9200
    - name: inter-node
      protocol: TCP
      port: 9300
