infra/k8s/index-kibana-depl.yaml
# Ref: https://www.digitalocean.com/community/tutorials/how-to-set-up-an-elasticsearch-fluentd-and-kibana-efk-logging-stack-on-kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: index-kibana
  template:
    metadata:
      labels:
        app: index-kibana
    spec:
      containers:
        - name: index-kibana
          image: docker.elastic.co/kibana/kibana:7.9.3
          resources:
            limits:
              memory: 2Gi
              cpu: 1000m
            requests:
              memory: 512Mi
              cpu: 100m
          ports:
          - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: index-kibana
spec:
  selector:
    app: index-kibana
  ports:
    - name: http
      protocol: TCP
      port: 5601
