infra/k8s/index-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: index-mongo
  template:
    metadata:
      labels:
        app: index-mongo
    spec:
      containers:
        - name: index-mongo
          image: mongo
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: index-mongo-svc
spec:
  selector:
    app: index-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017       # service port
      targetPort: 27017 # pod port
