infra/k8s/validation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validation
  template:
    metadata:
      labels:
        app: validation
    spec:
      containers:
        - name: validation
          image: murmurations/validation
          resources:
            limits:
              memory: 2Gi
              cpu: 2000m
            requests:
              memory: 1Gi
              cpu: 1000m
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: validation
spec:
  selector:
    app: validation
  ports:
    - name: validation
      protocol: TCP
      port: 8080
