infra/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: index.murmurations.network
      http:
        paths:
          - path: /v1(/|$)(.*)
            backend:
              serviceName: index
              servicePort: 8080
